Button Smaller Screen Fix 2

--- a/_assets/includes/media.css
+++ b/_assets/includes/media.css
@@ -3102,11 +3102,12 @@ and (max-height: 360px) {
 @media only screen and (min-width : 960px )
 and (max-device-width : 1175px) {
 
-	.roominfo .reservenowbutton .button2 {
+	.roominfo .reservenowbutton .button2
+	{
     cursor: pointer;
     width: 100%;
-    padding: 1px 5px;
-    font-size: 11px;
-}
+    padding: 1px 5px !important;
+    font-size: 11px !important;
+	}
 
 }
